<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="285dp"
    android:layout_height="285dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_dialog_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_rating_prompt"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/rating_title"
        android:textSize="20sp"
        android:fontFamily="@font/noto_black"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_second_title"
        android:layout_gravity="center"
        android:textSize="12dp"
        android:layout_marginTop="5dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/rating" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_not_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_not_now"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btn_rate_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_rate_now"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="30dp"/>


    </LinearLayout>
</LinearLayout>
